# encrypted-pipe

./: Cargo.toml
src/: crypto.rs  lib.rs  reader.rs  writer.rs
src/pipe/: mod.rs  mspc.rs  reader.rs  writer.rs
tests/: crypto.rs  main.rs  pipe.rs
