[package]
name = "encrypted_pipe"
authors = ["r3dlust <admin@r3dlust.com>"]
description = "A streaming encryption pipe implementation"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
chacha20 = "0.9"
pin-project = "1.0"
futures = "0.3"
uuid = { version = "1.1.2", features = ["v4"] }
rand = "0.8.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
