[package]
name = "multi-read-write"
authors = ["r3dlust <admin@r3dlust.com>"]
description = "A multi-readers and multi-writers tokio-compatible library"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["io-util"] }
pin-project = "1.0"
uuid = { version = "1.1.2", features = ["v4"] }
tokio-util = { version = "0.7.13", features = ["io"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
